# dstory

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
docs/charts/: index.html
docs/demo/: index.html
docs/gallery/: index.html
docs/morphs/: index.html
docs/themes/: index.html
scripts/: api_smoke.py  build_chart_reference.py  build_gallery.py  build_morph_showcase.py  build_theme_gallery.py
src/dstory/: __init__.py  api.py  brand.py  bundle.py  cli.py  prep.py  scaffold.py  schema.py  vet.py
src/dstory/cookbook/: __init__.py  annotated-scatter.js  bar-steps.js  beeswarm.js  bump-chart.js  dot-timeline.js  line-reveal.js  range-dots.js  slope-chart.js  small-multiples.js  waffle.js
src/dstory/references/: vizzu-chart-gallery.md
src/dstory/templates/: index.html  story.css  story.js
src/dstory/templates/scenes/: example-line-reveal.js  example-scrolly.js
src/dstory/themes/: brutalist.toml  data-fi.toml  editorial-noir.toml  minimal-light.toml  playful-pastel.toml  scientific-bright.toml  tech-glow.toml  warm-print.toml
tests/: test_brand.py  test_bundle_scaffold.py  test_e2e_browser.py  test_prep.py  test_scaffold_helpers.py  test_schema.py  test_v03_features.py  test_v04_features.py  test_v05_features.py  test_vet_static.py
